# minor_project

./: .env  .gitignore  README.md  analysis.py  attendance.py  combined_test.py  config.py  conv_vid_format.py  detect_and_send.py  embeddings.py  face_det.py  face_recog.py  llm_integration.py  main.py  package-lock.json  parallel_testing.py  pipeline_attendance.py  pipeline_combined.py  pipeline_combined_with_llm.py  pipeline_notes.py  processed_videos.txt  processor.py  pyproject.toml  quantize_model.py  record_face.py  req_specs.txt  requirements.txt  run_servers.sh  server.py  test.py  train.sh  trying_deep_face.py  yolo_dataset_zip - Shortcut.lnk
apps/: demo_app.py  files_ui.py
attendance_csv/: attendance.csv
database_attendance_csv/: attendance.csv  minor_demo.csv  recording_20250310-194001.csv  recording_20250311-175857.csv  uploaded_1743153948_video_2025-03-28_14-55-15.csv  uploaded_1743583675_video_2025-04-02_14-17-48.csv  uploaded_1743583941_output_2025-04-02_14-22-13.csv  uploaded_1743704223_recorded_video.csv  uploaded_recorded_video_2025-04-04_00-31-11.csv  uploaded_recorded_video_2025-04-04_00-38-09.csv  uploaded_recorded_video_2025-04-04_09-49-19.csv  uploaded_recorded_video_2025-04-04_09-50-05.csv  uploaded_recorded_video_2025-04-04_13-12-07.csv  uploaded_recorded_video_2025-04-04_13-14-58.csv  uploaded_recorded_video_2025-04-04_13-17-27.csv
database_notes/: None.md  recording_20250310-194001.md  recording_20250311-175857.md  test.md  transcription.md  uploaded_1743153948_video_2025-03-28_14-55-15.md  uploaded_1743583675_video_2025-04-02_14-17-48.md  (+14 more)
(+356 files in other folders)
