[project]
name = "minor-project"
version = "0.0.1"
description = "minor project for btech"
authors = [
    {name = "Manodeep ray"}
]
license = {text = "cc"}
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "opencv-contrib-python (>=4.10.0.84,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
