[project]
name = "minor-project"
version = "0.0.1"
description = "minor project for btech"
authors = [
    {name = "Manodeep ray"}
]
license = {text = "cc"}
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "opencv-contrib-python (>=4.10.0.84,<5.0.0.0)",
    "mlflow (>=2.20.1,<3.0.0)",
    "numpy (>=1.26.0,<2.1.0)",
    "deepface (>=0.0.93,<0.0.94)",
    "tf-keras (>=2.18.0,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
